--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,7 +29,7 @@ body,
 #root {
   margin: 0;
   padding: 0;
-  background-color: rgb(24 24 27);
+  background-color: rgb(17, 17, 17);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
