--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,6 +30,7 @@ body,
   margin: 0;
   padding: 0;
   font-family: "Roboto";
+  background: #101522;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
