--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@ html,
   height: 100vh;
   width: 100vw;
   margin: 0;
-  background-color: #101522;
+  background-color: #18181b;
 }
 
 .flex-grow {
