--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+#root {
+  font-family: "Roboto";
+  background: #0a0a0b;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  /* Prevent horizontal overflow */
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
@@ -22,15 +33,4 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
-}
-
-html,
-body,
-#root {
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto";
-  background: #18181b;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
